--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "squire-rte",
+    "name": "solv-squire",
     "version": "2.3.2",
     "description": "Squire is an HTML5 rich text editor, which provides powerful cross-browser normalisation, whilst being supremely lightweight and flexible.",
     "main": "dist/squire.mjs",
